# keras-py2cpp

./: .clang-format  CMakeLists.txt  Makefile  README.md  keras_model.cc  keras_model.h  kerasify.py  make_model.py  make_tests.py  nn.py  test.cc  test.cpp  test_model.py  yinsh.model  yinshCoach.py
include/keras/: layer.h  model.h  tensor.h  utility.h
include/keras/layers/: activation.h  conv1d.h  conv2d.h  dense.h  elu.h  embedding.h  flatten.h  locally1d.h  locally2d.h  lstm.h  maxpooling2d.h  normalization.h
include/test/: benchmark.h  conv_2x2.h  conv_3x3.h  conv_3x3x3.h  conv_hard_sigmoid_2x2.h  conv_sigmoid_2x2.h  conv_softplus_2x2.h  dense_10x1.h  dense_10x10.h  dense_10x10x10.h  dense_1x1.h  dense_2x2.h  dense_relu_10.h  dense_tanh_10.h  elu_10.h  embedding_64.h  lstm_simple_7x20.h  lstm_simple_stacked_16x9.h  lstm_stacked_64x83.h  maxpool2d_1x1.h  maxpool2d_2x2.h  maxpool2d_3x2x2.h  maxpool2d_3x3x3.h  relu_10.h
models/: conv_2x2.model  conv_3x3.model  conv_3x3x3.model  conv_hard_sigmoid_2x2.model  conv_sigmoid_2x2.model  conv_softplus_2x2.model  dense_10x1.model  dense_10x10.model  dense_10x10x10.model  dense_1x1.model  dense_2x2.model  dense_relu_10.model  dense_tanh_10.model  elu_10.model  embedding_64.model  lstm_simple_7x20.model  lstm_simple_stacked_16x9.model  lstm_stacked_64x83.model  maxpool2d_1x1.model  maxpool2d_2x2.model  maxpool2d_3x2x2.model  maxpool2d_3x3x3.model  relu_10.model
src/: layer.cpp  model.cpp  model_test.cpp  tensor.cpp  utility.cpp
src/layers/: activation.cpp  conv1d.cpp  conv2d.cpp  dense.cpp  elu.cpp  embedding.cpp  flatten.cpp  locally1d.cpp  locally2d.cpp  lstm.cpp  maxpooling2d.cpp  normalization.cpp
